Finished reworking part 1

--- a/Results.tex
+++ b/Results.tex
@@ -10,18 +10,14 @@
     \label{Fig:lifetimes}
 \end{figure*}
 
-To quantify RecB binding time to DNA in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:lifetimes}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process.\cite{Lepore2019a} To detect the binding of RecB to DSBs, we applied the previously developed technique of localisation enhancement.\cite{Yu2006, Elf2007} Since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while slow-diffusing RecB molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:lifetimes}A and \ref{Fig:lifetimes}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these structures were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}).
-
-%% We add ciprofloxacin (to be edited maybe)
-To gain more insight into DNA binding by RecB, we induced additional DSBs by adding the DSB-inducing antibiotic ciprofloxacin to agar pads before imaging. We acquired timelapse videos every 2 min for 60 min (Figure \ref{Fig:lifetimes}C), which allowed us to quantify RecB binding at different time points ranging from 15 to 75 min after the start of ciprofloxacin exposure.
-
-% Here add SI Fig with average spot lifetimes to justify fitting all timepoints together
+To quantify RecB binding time to DNA in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:lifetimes}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process.\cite{Lepore2019a} To detect the binding of RecB to DSBs, we applied the previously developed technique of localisation enhancement.\cite{Yu2006, Elf2007} Since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while slow-diffusing RecB molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:lifetimes}A and \ref{Fig:lifetimes}B). Seeing RecB spots in cells that were not exposed to an exogenous source of DNA damage was unsurprising, as these cells are still subject to occasional endogenous DNA damage, such as replication fork collisions which were previously reported to affect $\sim$18\% of cells per cell cycle.\cite{Sinha2018} The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these structures were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). We added ciprofloxacin to agar pads before imaging and acquired timelapse videos every 2 min for 60 min (Figure \ref{Fig:lifetimes}C), which allowed us to quantify RecB binding at different time points ranging from 15 to 75 min after the start of ciprofloxacin exposure.
 
 %% RecB spot lifetime histograms change upon exposure to ciprofloxacin
 %%% They are not well-fitted by a monoexponential decay (SI fig)
 %%% We fit with a bi-exponential decay model
-%%% Mention lifetimes/populations, in table
-Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more long-lived spots. Fitting with a mono-exponential decay model as in Figure \ref{Fig:lifetimes}D did not account well for these long-lived spots (Supp. Figure \ref{SIFig:monoexp_fits}), especially at the higher ciprofloxacin concentrations. This suggested that the new long-lived spots that appeared under exposure to ciprofloxacin corresponded to a new population of RecB spots, that had a slower dissociation rate from DNA than the ones observed under endogenous damage. Indeed, fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted much better for the longer-lived RecB spots (Figure \ref{Fig:recruitment}B). The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with lifetimes ranging from 1.4 to 1.7 sec, and a longer-lived one, with lifetimes ranging from 10 to 14 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 1.4\% $\pm$ 0.3 under 3 ng/mL ciprofloxacin to 5.5\% $\pm$ 1.4 under 30 ng/mL ciprofloxacin).
+%%% Comment on lifetimes/populations, in table
+%%% Fitting lifetimes on different timepoints (SI Fig) shows no change with duration of ciprofloxacin exposure
+Using the timelapse data, we built histograms of RecB spot lifetimes at the different ciprofloxacin concentrations (Figure \ref{Fig:lifetimes}D). Fitting these histograms with a mono-exponential decay model ($y = a.e^{-k.t}$) did not match the experimental data accurately (Supp. Figure \ref{SIFig:monoexp_fits}). In particular, it did not account for a population of longer-lived RecB spots ($>$ 10 sec), which was more visible at the higher ciprofloxacin concentrations. This suggested that these long-lived spots corresponded to a new population of RecB spots, that had a longer lifetime than the ones observed under endogenous damage. Indeed, fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted much better for the longer-lived RecB spots (Figure \ref{Fig:lifetimes}D). The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with lifetimes ranging from 1.4 to 1.7 sec, and a longer-lived one, with lifetimes ranging from 10 to 14 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 1.4\% $\pm$ 0.3 under 3 ng/mL ciprofloxacin to 5.5\% $\pm$ 1.4 under 30 ng/mL ciprofloxacin). To test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits for 15-min windows in all experiments (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). Although lifetime determination was less precise due to the smaller amount of data for each fit, spot lifetimes did not change between the beginning and the end of our experiments.
 
 \begin{table}[htbp]
     \centering
@@ -51,17 +47,11 @@ Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more
     \label{tab:fit_results}
 \end{table}
 
-% PARAGRAPH TO BE MOVED SOMEWHERE RELEVANT (above)
-Seeing RecB spots in cells that were not exposed to an exogenous source of DNA damage was unsurprising, as these cells are still subject to occasional endogenous DNA damage, such as replication fork collisions which were previously reported to affect $\sim$18\% of cells per cell cycle.\cite{Sinha2018}
-
-% PARAGRAPH TO BE MOVED TO METHODS
-This prolonged imaging of the RecB-Halo fusion was only possible thanks to the exceptional photostability of the JF549 dye, which displayed slow photobleaching and no blinking (Supp. Note \ref{note:dye_bleaching} and Supp. Fig. \ref{SIFig:dye_bleaching}).
-
 %% To check what these two populations are, we use the Gam protein to prevent DNA binding and fit with the same model
 %%% Short-lived population stays, long-lived one is removed
 %%% Interpretation: because of its size, the RecBCD-Halo-Gam complex can sometimes form spots (SI Note + SI Fig), which creates short spots
 %%% Therefore, we are unable to assign short DNA binding events, but we can confidently detect longer DNA binding events
-To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/mL) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs. The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). This confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Spots that are visible only for a few seconds cannot be reliably assigned to one or the other category. However, based on the Gam overexpression data, we determined that any spot with a lifetime over 10 sec had 95\% probability to be DNA-bound (Figure \ref{Fig:recruitment}C).
+To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs. The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). The residual amount of long-lived RecB spots in the presence of Gam could be due to residual DNA binding despite the presence of Gam. This residual binding could also be the cause for the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). This result confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Spots that are visible only for a few seconds cannot be reliably assigned as DNA-bound or freely diffusing. However, based on the Gam overexpression data, we determined that any spot with a lifetime over 10 sec had 95\% probability to be DNA-bound (Figure \ref{Fig:recruitment}A).
 
 \begin{figure}[htbp]
     \centering
@@ -74,7 +64,7 @@ To determine whether both short- and long-lived spots resulted from RecB binding
 %% Mention/link to discussion on relationship between RecB recruitment rate and DSB formation rate
 Whereas the lifetime of the fluorescent spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition (Figure \ref{Fig:recruitment}D). To achieve this, we quantified for each timelapse the total number of spots that belong to the "long-lived" (i.e. RecB bound to DNA) category. Since the short- and long-lived populations cannot be clearly separated from the lifetime histograms (Figure \ref{Fig:recruitment}B), we used an "ensemble-level" approach. For each dataset, we multiplied the total number of spots that appeared during the timelapse by the proportion of long-lived spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated. We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to the DNA per hour on average. This is roughly consistent with the previous estimate of 18\% of cells generating an endogenous DSB per cell cycle\cite{Sinha2018}. At ciprofloxacin concentrations above the MIC (30 ng/mL), the recruitment rate increased sharply to an average of 5 RecB recruited per hour. Furthermore, we expect that this recruitment rate gives a close estimate of the rate of formation of DSBs.
 
-% Part 3: Effects of DSBs and the repair process on the cell
+% Part 2: Effects of DSBs and the repair process on the cell
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments and nucleoid compaction}
 
 %% SECTION MOVED FROM PART 1, TO BE REVIEWED
@@ -103,7 +93,7 @@ As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figur
 %% Overall conclusion on RecA filaments, nucleoid compaction, and correlation of DNA-bound RecB position with nucleoid density
 Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the break site, which we were able to detect as bright foci and filaments. At the lower (sub-MIC) ciprofloxacin concentrations, these structures were present in a low proportion of cells (10-20\%). At higher ciprofloxacin concentrations, RecA filaments were present in a large fraction of the cells (up to 40\%), hinting at an accumulation of long-lived RecA filaments unable to find a homologous sequence for repair. RecA loading on DNA also induces the SOS response. As a result, we observed compaction and centring of the bacterial nucleoid. DNA-bound RecB molecules were also found to be centred in elongated cells, consistently with DSBs forming on compacted nucleoids.
 
-% Part 4: Mutants in the repair pathway
+% Part 3: Mutants in the repair pathway
 \subsection*{RecB dissociation does not depend on RecA loading}
 
 \begin{figure*}[htbp]
