Added method for determining recruitment rates

--- a/Methods.tex
+++ b/Methods.tex
@@ -60,8 +60,8 @@ The binding time of individual RecB molecules on DNA was extracted in BACMMAN as
 
 Because we are unable to differentiate whether the disappearance of a fluorescent spot is due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we must consider that the fitted "spot disappearance rates" $k_1$ and $k_2$ are a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
-\paragraph*{Thresholding to differentiate short- and long-lived RecB binding events}
-To classify RecB spots as either short- or long-lived events, a spot lifetime threshold was determined for each dataset from the bi-exponential fits, such that spots that had a lifetime longer than the threshold had a 95\% probability of being in the "long-lived" population. Spots with a lifetime shorter than this threshold could not reliably be attributed to one or the other population.
+\paragraph*{Estimation of the rate of RecB recruitment to DNA}
+For each timelapse, we quantified the total number of RecB spots that were bound to DNA. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DNA-bound RecB molecules. To estimate the total number of DNA-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DNA-bound, and the spots that disappeared with a faster rate were slow-diffusing complexes. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated.
 
 \subsection*{Code availability}
 Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The Jupyter Notebooks used to make the article figures are also available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
