--- a/Article.tex
+++ b/Article.tex
@@ -17,7 +17,7 @@
 
 \begin{document}
 
-\title{\emph{In-vivo} imaging of the repair of ciprofloxacin-induced DNA double-strand breaks}
+\title{RecBCD dissociation from DNA \emph{in-vivo} is independent from external factors}
 \shorttitle{}
 
 \author[1]{Daniel Thédié}
