Added refs for FP blinking and JF549 stability

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -859,3 +859,36 @@ The authors have declared no competing interest.},
    url = {https://www.pnas.org/doi/abs/10.1073/pnas.1424269112},
    year = {2015},
 }
+@article{Thedie2017,
+   abstract = {Green-to-red photoconvertible fluorescent proteins (PCFPs) such as mEos2 and its derivatives are widely used in PhotoActivated Localization Microscopy (PALM). However, the complex photophysics of these genetically encoded markers complicates the quantitative analysis of PALM data. Here, we show that intense 561 nm light (∼1 kW/cm2) typically used to localize single red molecules considerably affects the green-state photophysics of mEos2 by populating at least two reversible dark states. These dark states retard green-to-red photoconversion through a shelving effect, although one of them is rapidly depopulated by 405 nm light illumination. Multiple mEos2 switching and irreversible photobleaching is thus induced by yellow/green and violet photons before green-to-red photoconversion occurs, contributing to explain the apparent limited signaling efficiency of this PCFP. Our data reveals that the photophysics of PCFPs of anthozoan origin is substantially more complex than previously thought, and suggests that intense 561 nm laser light should be used with care, notably for quantitative or fast PALM approaches.},
+   author = {Daniel Thédié and Romain Berardozzi and Virgile Adam and Dominique Bourgeois},
+   doi = {10.1021/ACS.JPCLETT.7B01701/ASSET/IMAGES/LARGE/JZ-2017-01701K_0004.JPEG},
+   issn = {19487185},
+   issue = {18},
+   journal = {Journal of Physical Chemistry Letters},
+   month = {9},
+   pages = {4424-4430},
+   pmid = {28850784},
+   publisher = {American Chemical Society},
+   title = {Photoswitching of Green mEos2 by Intense 561 nm Light Perturbs Efficient Green-to-Red Photoconversion in Localization Microscopy},
+   volume = {8},
+   url = {https://pubs.acs.org/doi/full/10.1021/acs.jpclett.7b01701},
+   year = {2017},
+}
+@article{Grimm2015,
+   abstract = {A simple and general chemical structure change to a panel of cell-permeable small-molecule fluorophores increases their brightness and photostability, which will enable improved single-molecule studies and super-resolution imaging. Specific labeling of biomolecules with bright fluorophores is the keystone of fluorescence microscopy. Genetically encoded self-labeling tag proteins can be coupled to synthetic dyes inside living cells, resulting in brighter reporters than fluorescent proteins. Intracellular labeling using these techniques requires cell-permeable fluorescent ligands, however, limiting utility to a small number of classic fluorophores. Here we describe a simple structural modification that improves the brightness and photostability of dyes while preserving spectral properties and cell permeability. Inspired by molecular modeling, we replaced the N,N-dimethylamino substituents in tetramethylrhodamine with four-membered azetidine rings. This addition of two carbon atoms doubles the quantum efficiency and improves the photon yield of the dye in applications ranging from in vitro single-molecule measurements to super-resolution imaging. The novel substitution is generalizable, yielding a palette of chemical dyes with improved quantum efficiencies that spans the UV and visible range.},
+   author = {Jonathan B. Grimm and Brian P. English and Jiji Chen and Joel P. Slaughter and Zhengjian Zhang and Andrey Revyakin and Ronak Patel and John J. Macklin and Davide Normanno and Robert H. Singer and Timothée Lionnet and Luke D. Lavis},
+   doi = {10.1038/nmeth.3256},
+   issn = {1548-7105},
+   issue = {3},
+   journal = {Nature Methods 2015 12:3},
+   keywords = {Cellular imaging,Chemical synthesis,Chemical tools,Fluorescent dyes},
+   month = {1},
+   pages = {244-250},
+   pmid = {25599551},
+   publisher = {Nature Publishing Group},
+   title = {A general method to improve fluorophores for live-cell and single-molecule microscopy},
+   volume = {12},
+   url = {https://www.nature.com/articles/nmeth.3256},
+   year = {2015},
+}
