Updated photobleaching SI figure

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -87,7 +87,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/SIFig_bleaching.pdf}
     \end{center}
-    \caption{Ensemble-level photobleaching of the JF549 dye. (A) Average background-subtracted fluorescence for 5 independent datasets (solid lines), overlaid with the photobleaching rate fit ($y=a.e^{-k.t}+b$, dotted line). (B) Fitted model parameters for each of the 5 datasets: amplitude (a), offset (b) and photobleaching rate (k).}
+    \caption{Ensemble-level photobleaching of the JF549 dye. (A) Average background-subtracted fluorescence for 5 independent datasets (dots), overlaid with the photobleaching rate fit ($y=a.e^{-k.t}+b$, line) for individual datasets. (B) Fitted model parameters for each dataset: amplitude (a), photobleaching rate (k) and offset (b).}
     \label{SIFig:dye_bleaching}
 \end{suppfigure*}
 
