--- a/Notebooks/Ciprofloxacin/RecB_spots.ipynb
+++ b/Notebooks/Ciprofloxacin/RecB_spots.ipynb
@@ -86,6 +86,7 @@
     "        .drop_duplicates(object_name='RecB_spots', subset=['Dataset', 'Position', 'TrackHeadIndices'])\n",
     "        .assign(Time_min=lambda df: df.Time_min + 15)\n",
     "        .bin_column(col='Time_min', binsize=15, binlabels='left')\n",
+    "        .assign(Group=lambda df: df.Group.astype('category').cat.set_categories(['0 ng/ml', '3 ng/ml', '10 ng/ml', '20 ng/ml', '30 ng/ml'], ordered=True))\n",
     "        )"
    ]
   },
